Added presentation for word sense disambiguation and induction

--- a/presentations/Word embedding spaces - First meeting.Rmd
+++ b/presentations/Word embedding spaces - First meeting.Rmd
@@ -3,7 +3,9 @@ title: "Word embedding spaces"
 subtitle: "First session: Introduction"
 author: "Benjamin Ruppik"
 date: "`r Sys.Date()`"
-output: ioslides_presentation
+output:
+  ioslides_presentation:
+    widescreen: true
 ---
 
 ```{r setup, include=FALSE}
