Quick edit to demo adding a placeholder for GloVe embeddings

--- a/exercises/word2vec_demo.ipynb
+++ b/exercises/word2vec_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word Embeddings with word2vec"
+    "# Word Embeddings with word2vec, fastText and GloVe"
    ]
   },
   {
@@ -16,10 +16,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gensim in /opt/homebrew/Caskroom/miniforge/base/envs/2022-02-10_rosetta_py3.8_new/lib/python3.7/site-packages (4.1.2)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /opt/homebrew/Caskroom/miniforge/base/envs/2022-02-10_rosetta_py3.8_new/lib/python3.7/site-packages (from gensim) (5.2.1)\n",
-      "Requirement already satisfied: scipy>=0.18.1 in /opt/homebrew/Caskroom/miniforge/base/envs/2022-02-10_rosetta_py3.8_new/lib/python3.7/site-packages (from gensim) (1.7.3)\n",
-      "Requirement already satisfied: numpy>=1.17.0 in /opt/homebrew/Caskroom/miniforge/base/envs/2022-02-10_rosetta_py3.8_new/lib/python3.7/site-packages (from gensim) (1.21.5)\n"
+      "Requirement already satisfied: gensim in /home/ben/.local/lib/python3.8/site-packages (4.1.2)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in /home/ben/.local/lib/python3.8/site-packages (from gensim) (5.2.1)\n",
+      "Requirement already satisfied: scipy>=0.18.1 in /home/ben/miniconda3/envs/py3.8/lib/python3.8/site-packages (from gensim) (1.8.0)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in /home/ben/.local/lib/python3.8/site-packages (from gensim) (1.19.2)\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -488,9 +488,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## fastText"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A big issue of Word2Vec is the fixed vocabulary size, an alternative solution is provided by FastText"
+    "#### A big issue of Word2Vec is the fixed vocabulary size, an alternative solution is provided by fastText"
    ]
   },
   {
@@ -637,6 +646,24 @@
    "source": [
     "trained_ft.wv.most_similar('expensif')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## GloVe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
   }
  ],
  "metadata": {
@@ -655,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
