Added more pictures and examples to first presentation; edited the jupyter notebook which contains examples of nltk

--- a/exercises/NLP_tasks.ipynb
+++ b/exercises/NLP_tasks.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "5445a0c2-7a15-4eeb-8d52-303623800cf6",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,13 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to /Users/ruppik/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/ruppik/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
+      "[nltk_data] Downloading package tagsets to /Users/ruppik/nltk_data...\n",
+      "[nltk_data]   Unzipping help/tagsets.zip.\n"
      ]
     },
     {
@@ -35,13 +41,23 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nltk.download('punkt')"
+    "nltk.download('punkt')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "nltk.download('tagsets')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17a57093-a47f-44d8-9569-2669c1d65bd9",
+   "metadata": {},
+   "source": [
+    "## Word-sense disambiguation (WSD)"
    ]
   },
   {
@@ -82,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "bf4bce13-4d7d-4182-a916-49e8499d733d",
    "metadata": {},
    "outputs": [
@@ -111,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "8c91d1f7-586e-4dfd-9052-170c7c2eb874",
    "metadata": {},
    "outputs": [
@@ -119,27 +135,258 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Synset('jamming.n.01') deliberate radiation or reflection of electromagnetic energy for the purpose of disrupting enemy use of electronic devices or systems\n",
-      "Synset('jam.v.05') get stuck and immobilized\n",
-      "Synset('jam.n.01') preserve of crushed fruit\n"
+      "Synset('jamming.n.01') deliberate radiation or reflection of electromagnetic energy for the purpose of disrupting enemy use of electronic devices or systems\n"
      ]
     }
    ],
    "source": [
     "a1 = lesk(word_tokenize('This device is used to jam the signal'),'jam')\n",
-    "print(a1, a1.definition())\n",
-    "\n",
+    "print(a1, a1.definition())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4a904526-1d6b-4a0a-9839-60dbe61d0d30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synset('jam.v.05') get stuck and immobilized\n"
+     ]
+    }
+   ],
+   "source": [
     "a2 = lesk(word_tokenize('I am stuck in a traffic jam'),'jam')\n",
-    "print(a2, a2.definition())\n",
-    "\n",
+    "print(a2, a2.definition())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "17f90c85-bbfd-49d2-a92f-0be2b663e705",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synset('jam.n.01') preserve of crushed fruit\n"
+     ]
+    }
+   ],
+   "source": [
     "a3 = lesk(word_tokenize('Pete likes fruit jam on a toast'),'jam')\n",
     "print(a3, a3.definition())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce38ef3c-e9c0-4da1-8f42-f39f6c703eda",
+   "metadata": {},
+   "source": [
+    "## Part of Speech tagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f9a5210b-12d3-4762-ab11-897ccb63a934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('They', 'PRP'),\n",
+       " ('refuse', 'VBP'),\n",
+       " ('to', 'TO'),\n",
+       " ('permit', 'VB'),\n",
+       " ('us', 'PRP'),\n",
+       " ('to', 'TO'),\n",
+       " ('obtain', 'VB'),\n",
+       " ('the', 'DT'),\n",
+       " ('refuse', 'NN'),\n",
+       " ('permit', 'NN')]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = word_tokenize(\"They refuse to permit us to obtain the refuse permit\")\n",
+    "nltk.pos_tag(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8ddd9c90-9547-4956-9dc2-01c36da4c80f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VB: verb, base form\n",
+      "    ask assemble assess assign assume atone attention avoid bake balkanize\n",
+      "    bank begin behold believe bend benefit bevel beware bless boil bomb\n",
+      "    boost brace break bring broil brush build ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.help.upenn_tagset('VB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d489f62f-706b-441f-b94f-e2a0bcd3969b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NN: noun, common, singular or mass\n",
+      "    common-carrier cabbage knuckle-duster Casino afghan shed thermostat\n",
+      "    investment slide humour falloff slick wind hyena override subhumanity\n",
+      "    machinist ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.help.upenn_tagset('NN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1c7fe866-a541-4b56-8e88-6498466bfad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The', 'DT'),\n",
+       " ('sailor', 'NN'),\n",
+       " ('dogs', 'VBZ'),\n",
+       " ('the', 'DT'),\n",
+       " ('hatch', 'NN')]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = word_tokenize(\"The sailor dogs the hatch\")\n",
+    "nltk.pos_tag(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "80caecbd-1620-43f8-971a-04ff42c7e296",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VBZ: verb, present tense, 3rd person singular\n",
+      "    bases reconstructs marks mixes displeases seals carps weaves snatches\n",
+      "    slumps stretches authorizes smolders pictures emerges stockpiles\n",
+      "    seduces fizzes uses bolsters slaps speaks pleads ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.help.upenn_tagset('VBZ')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a904526-1d6b-4a0a-9839-60dbe61d0d30",
+   "id": "f55f9ec1-51e0-4baa-8a01-6695393068bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c48f50f9-cb07-4475-b21c-99a17c54af56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('can', 'MD'), ('of', 'IN'), ('fish', 'NN')]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example\n",
+    "text = word_tokenize(\"can of fish\")\n",
+    "nltk.pos_tag(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "14068618-8d3b-4e42-bd8f-3f21a3631f15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MD: modal auxiliary\n",
+      "    can cannot could couldn't dare may might must need ought shall should\n",
+      "    shouldn't will would\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.help.upenn_tagset('MD')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "bf860544-112e-438f-baf2-4cfeaa567fe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('we', 'PRP'), ('can', 'MD'), ('fish', 'VB')]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = word_tokenize(\"we can fish\")\n",
+    "nltk.pos_tag(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad048054-2a64-45ca-b2c1-203dbdab2261",
    "metadata": {},
    "outputs": [],
    "source": []
