--- a/presentations/word_embeddings_references.bib
+++ b/presentations/word_embeddings_references.bib
@@ -150,6 +150,14 @@
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{Luong-etal:naacl15:bivec,
+        Address = {Denver, United States},
+        Author = {Luong, Minh-Thang  and  Pham, Hieu and Manning, Christopher D.},
+        Booktitle = {NAACL Workshop on Vector Space Modeling for NLP},
+        Title = {Bilingual Word Representations with Monolingual Quality in Mind},
+        Year = {2015}
+}
+
 @article{DBLP:journals/corr/BolukbasiCZSK16a,
 	author    = {Tolga Bolukbasi and
 	Kai{-}Wei Chang and
